# jitgl

./: .gitignore  .jitgl_prefs  .jitgl_welcome_prefs  CMakeLists.txt  README.md  gdb_bt.txt  imgui.ini  todo
assets/: guide.md  input_example_scene.cpp  inputs.md  shared.glsl  showcase_guide.md  showcase_scene.cpp  showcase_shader.glsl  showcase_uniforms.json  welcome.md
src/: main.cpp
src/assets/: AssetRegistry.cpp  AssetRegistry.h  MeshLoader.cpp  MeshLoader.h
src/core/: Engine.cpp  Engine.h  WorkspaceManager.cpp  WorkspaceManager.h
src/jit/: JitEngine.cpp  JitEngine.h
src/runtime/: EngineContext.h  engine.hpp
src/system/: AppPreferences.cpp  AppPreferences.h  ConsoleRedirectSession.cpp  ConsoleRedirectSession.h  ConsoleRedirector.cpp  ConsoleRedirector.h
src/system/network/: LanWorkspaceShareService.cpp  LanWorkspaceShareService.h
src/ui/: EditorUI.cpp  EditorUI.h
src/uniform/: UniformControls.h  UniformParser.cpp  UniformParser.h  UniformRegistry.cpp  UniformRegistry.h
src/watcher/: FileWatcher.cpp  FileWatcher.h
